airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T125711.809031+0000/task_id=run_pipeline_1/attempt=1.log
[2026-06-03T12:57:15.735+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T12:57:15.816+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_1 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T12:57:15.833+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_1 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T12:57:15.834+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-03T12:57:15.861+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_1> on 2026-06-03 12:57:11.809031+00:00
[2026-06-03T12:57:15.879+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_1', 'manual__2026-06-03T12:57:11.809031+00:00', '--job-id', '138', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmpyl3ugn1k']
[2026-06-03T12:57:15.885+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2130) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T12:57:15.889+0000] {standard_task_runner.py:91} INFO - Job 138: Subtask run_pipeline_1
[2026-06-03T12:57:15.890+0000] {standard_task_runner.py:63} INFO - Started process 2133 to run task
[2026-06-03T12:57:15.971+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_1 manual__2026-06-03T12:57:11.809031+00:00 [running]> on host c3bf940c8326
[2026-06-03T12:57:16.121+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_1' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T12:57:11.809031+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T12:57:11.809031+00:00'
[2026-06-03T12:57:16.125+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T12:57:16.146+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T12:57:16.147+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 1']
[2026-06-03T12:57:16.174+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T12:57:30.043+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.044+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:30.045+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T12:57:30.046+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:30.046+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T12:57:30.047+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T12:57:30.047+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T12:57:30.048+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T12:57:30.048+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T12:57:30.049+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:30.049+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.050+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T12:57:30.050+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.051+0000] {subprocess.py:93} INFO - Running pipeline: postgres_to_s3_pipeline (db_to_storage)
[2026-06-03T12:57:30.051+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.052+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:30.052+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T12:57:30.053+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:30.053+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T12:57:30.053+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T12:57:30.054+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T12:57:30.054+0000] {subprocess.py:93} INFO - DATABASE  : udifdb
[2026-06-03T12:57:30.055+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T12:57:30.055+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T12:57:30.056+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.056+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T12:57:30.056+0000] {subprocess.py:93} INFO - Completed: 4653 rows processed
[2026-06-03T12:57:30.057+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T12:57:30.057+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 72, in main
[2026-06-03T12:57:30.058+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T12:57:30.058+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T12:57:30.059+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T12:57:30.059+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T12:57:30.059+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T12:57:30.060+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T12:57:30.060+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.061+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.061+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T12:57:30.062+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.062+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T12:57:30.062+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 111, in <module>
[2026-06-03T12:57:30.063+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T12:57:30.063+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 95, in main
[2026-06-03T12:57:30.064+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T12:57:30.064+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T12:57:30.065+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T12:57:30.065+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T12:57:30.066+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T12:57:30.066+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T12:57:30.067+0000] {subprocess.py:93} INFO - 
[2026-06-03T12:57:30.273+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T12:57:30.274+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T12:57:30.285+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T12:57:30.290+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_1, run_id=manual__2026-06-03T12:57:11.809031+00:00, execution_date=20260603T125711, start_date=20260603T125715, end_date=20260603T125730
[2026-06-03T12:57:30.314+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 138 for task run_pipeline_1 (Bash command failed. The command returned a non-zero exit code 1.; 2133)
[2026-06-03T12:57:30.324+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T12:57:30.340+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T12:57:30.343+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
